--- a/backend-sb/cryptobytes/src/main/resources/application.properties
+++ b/backend-sb/cryptobytes/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.password=root
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-//server.error.include-message=always
+server.error.include-message=always
