--- a/backend-sb/cryptobytes/src/main/resources/application.properties
+++ b/backend-sb/cryptobytes/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.error.include-message=always
+
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
