--- a/backend-sb/cryptobytes/.gitignore
+++ b/backend-sb/cryptobytes/.gitignore
@@ -7,10 +7,12 @@ target/
 ./application.yml
 ./src/main/resources/**
 !**/src/main/resources/application.yml
-/cryptobytes/src/main/resources/application.yml
-/cryptobytes/src/main/resources/certs/**
-/cryptobytes/src/main/resources/certs/private.pem
-/cryptobytes/src/main/resources/certs/public.pem
+/src/main/resources/application.yml
+/src/main/resources/certs/**
+/src/main/resources/certs/private.pem
+/src/main/resources/certs/public.pem
+./src/main/resources/certs/private.pem
+./src/main/resources/certs/public.pem
 
 ### STS ###
 .apt_generated
